--- a/sass/layouts/_portfolio.scss
+++ b/sass/layouts/_portfolio.scss
@@ -39,3 +39,15 @@
 	transition-timing-function: var(--timing-funktion);
 	transition-delay: var(--timing-funktion);
 }
+.portfolio-desc {
+	display: block;
+	position: absolute;
+	font-family: Roboto;
+	font-style: normal;
+	font-weight: 400;
+	font-size: 18px;
+	line-height: 1.6;
+	letter-spacing: 0.03em;
+	color: #ffffff;
+	transition: 250ms var(--timing-funktion);
+}
